--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="w-100 p-3 bg-light d-flex justify-content-around">
   <a [routerLink]="['/']">
-    <img width="36" src="../assets/icons/24px.svg">
+    <img width="36" src="assets/icons/24px.svg">
   </a>
   <a [routerLink]="['/history']">
-    <img width="36" src="../assets/icons/history-solid.svg">
+    <img width="36" src="assets/icons/history-solid.svg">
   </a>
   <a (click)="setPort()">
-    <img width="36" src="../assets/icons/cog-solid.svg">
+    <img width="36" src="assets/icons/cog-solid.svg">
   </a>
 </div>
 <div class="content">
