--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,21 @@
 <div class="w-100 p-3 bg-light d-flex justify-content-around">
-  <a [routerLink]="['/']">
-    <img width="36" src="assets/icons/24px.svg">
-  </a>
-  <a [routerLink]="['/history']">
-    <img width="36" src="assets/icons/history-solid.svg">
-  </a>
-  <a (click)="setPort()">
-    <img width="36" src="assets/icons/cog-solid.svg">
-  </a>
+  <div class="col-4 text-center position-relative ishover" (click)="isActive = true">
+    <a [routerLink]="['/']" >
+      <img width="36" src="assets/icons/24px.svg">
+    </a>
+    <span [ngClass]="{bottomLine: isActive}"></span>
+  </div>
+  <div class="col-4 text-center ishover" (click)="isActive = false">
+    <a [routerLink]="['/history']">
+      <img width="36" src="assets/icons/history-solid.svg">
+    </a>
+    <span [ngClass]="{bottomLine: !isActive}"></span>
+  </div>
+  <div class="col-4 text-center ishover">
+    <a (click)="setPort()">
+      <img width="36" src="assets/icons/cog-solid.svg">
+    </a>
+  </div>
 </div>
 <div class="content">
   <router-outlet></router-outlet>
