--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,3 +28,17 @@ a{
     border-radius: 6px;
     background: #fff;
 }
+
+.ishover:hover{
+    transform: scale(1.1);
+}
+
+.bottomLine{
+    width: 100%;
+    height: 3px;
+    background: green;
+    display: inline-block;
+    position: absolute;
+    bottom: -15px;
+    left: 0;
+}
