--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <div class="w-100 p-3 bg-light d-flex justify-content-around">
-  <div class="col-4 text-center position-relative ishover" (click)="isActive = true">
-    <a [routerLink]="['/']" >
+  <div class="col-4 text-center position-relative" (click)="isActive = 0">
+    <a [routerLink]="['/']" class="ishover d-inline-block">
       <img width="36" src="assets/icons/24px.svg">
     </a>
-    <span [ngClass]="{bottomLine: isActive}"></span>
+    <span [ngClass]="{bottomLine: isActive === 0}"></span>
   </div>
-  <div class="col-4 text-center ishover" (click)="isActive = false">
-    <a [routerLink]="['/history']">
+  <div class="col-4 text-center" (click)="isActive = 1">
+    <a [routerLink]="['/history']" class="ishover d-inline-block">
       <img width="36" src="assets/icons/history-solid.svg">
     </a>
-    <span [ngClass]="{bottomLine: !isActive}"></span>
+    <span [ngClass]="{bottomLine: isActive === 1}"></span>
   </div>
   <div class="col-4 text-center ishover">
     <a (click)="setPort()">
@@ -24,14 +24,13 @@
 <div *ngIf="toggleDialog">
   <div class="dialog"></div>
   <div class="setting ">
-    <form [formGroup]="form" class="d-flex flex-column">
+    <form [formGroup]="selectedComPortForm" (ngSubmit)="setPort()" class="d-flex flex-column">
       <label>請設定 COM-PORT</label>
-      <select>
-        <option>A</option>
-        <option>B</option>
-        <option>C</option>
+      <select formControlName="selected">
+        <option>請選擇 comport</option>
+        <option *ngFor="let list of comPortList">{{ list }}</option>
       </select>
-      <button type="button" class="btn btn-primary mt-3" (click)="setPort()">確定</button>
+      <button type="submit" class="btn btn-primary mt-3">確定</button>
     </form>
   </div>
 </div>
