--- a/src/app/components/tables/tables.component.html
+++ b/src/app/components/tables/tables.component.html
@@ -38,8 +38,8 @@
       <td>{{ item.nTotalAngle }}</td>
       <td>{{ item.snDirection }}</td>
       <td>{{ item.snFinish }}</td>
-      <td>{{ item.snReport }}</td>
-      <td>{{ item.snStatus }}</td>
+      <td>{{ item.snReport | report }}</td>
+      <td>{{ item.snStatus | status }}</td>
       <td>{{ item.snTemperature }}</td>
       <td>{{ item.snTorqueUnit }}</td>
     </tr>
