--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -27,10 +27,34 @@ a{
     padding: 16px;
     border-radius: 6px;
     background: #fff;
+    // box-shadow: 0px 0px 11px 3px #bbb;
+}
+
+
+.closebtn{
+    cursor: pointer;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-weight: 900;
+    background: red;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    text-align: center;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .ishover:hover{
     transform: scale(1.1);
+}
+
+.isDisabled{
+    pointer-events: none;
+    opacity: 0.3;
 }
 
 .bottomLine{
@@ -41,4 +65,14 @@ a{
     position: absolute;
     bottom: -15px;
     left: 0;
+}
+
+.loading{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #bbb;
+    z-index: 99;
 }
