--- a/src/app/components/tables/tables.component.scss
+++ b/src/app/components/tables/tables.component.scss
@@ -24,3 +24,9 @@ table tr th:nth-of-type(16){width:5.26%}
 table tr th:nth-of-type(17){width:5.26%}
 table tr th:nth-of-type(18){width:5.26%}
 table tr th:nth-of-type(19){width:5.26%}
+
+
+.background-fail{
+    background: #ff5858;
+    color: #fff;
+}
