--- a/src/app/pages/delete/delete.component.html
+++ b/src/app/pages/delete/delete.component.html
@@ -4,7 +4,7 @@
       <span class="input-group-text" id="basic-addon1">Serial Number</span>
     </div>
     <select required class="form-control" (change)="getfile($event)">
-      <option value="">請選擇</option>
+      <option value="">Please choose one</option>
       <option *ngFor="let list of lists" [value]="list">{{ list }}</option>
     </select>
   </div>
@@ -17,7 +17,7 @@
     </li>
   </ul>
   <div *ngIf="historyFile.length" class=" mt-3">
-    <button class="btn btn-danger" (click)="activeDel()">刪除</button>
-    <button class="btn btn-warning ml-3" (click)="deleteAll()">全部刪除(包含serial number)</button>
+    <button class="btn btn-danger" (click)="activeDel()">Delete</button>
+    <button class="btn btn-warning ml-3" (click)="deleteAll()">Delete all (including serial number)</button>
   </div>
 </div>
