--- a/src/app/pages/realtime/realtime.component.html
+++ b/src/app/pages/realtime/realtime.component.html
@@ -1,39 +1,77 @@
-<div class="d-flex flex-column h-100 overflow-auto">
+<div class="d-flex flex-column">
   <div class="alert alert-danger col-4 position-absolute" role="alert" *ngIf="stopAlert">
-    連線中斷
+    Connect Interrupt
   </div>
   <div class="alert alert-success col-4 position-absolute" role="alert" *ngIf="showConnectAlert">
-    開始連線
+    Connected
   </div>
   <div class="alert alert-success col-4 position-absolute" role="alert" *ngIf="finishedAlert">
-    作業已完成，請按重置後在進行下一輪作業
+    The job has been completed, please press the reset and proceed to the next round
   </div>
-  <div class="d-flex h-50">
-    <div class="col-8 p-4">
-      <app-charts [isConnect]="isConnect" [info]="info" [stopAndReset]="stopAndReset" (sendLog)="showLog($event)"
+  <div class="alert alert-danger col-4 position-absolute text-center position-relative remind" role="alert" *ngIf="showRemind">
+    <p>Warning!! Will be Reset!!</p>
+    <div class="flex justify-content-between">
+      <button class="btn btn-danger" (click)="reset()">confirm</button>
+      <button class="btn btn-danger ml-3" (click)="cancel()">cancel</button>
+    </div>
+  </div>
+  <div class="d-flex dashboardZone">
+    <div class="col-8 p-3">
+      <app-charts [closeStocket]="closeStocket" [isConnect]="isConnect" [info]="info" [stopAndReset]="stopAndReset" (sendLog)="showLog($event)"
         (finished)="ableReset()"></app-charts>
     </div>
-    <form [formGroup]="basicForm" (ngSubmit)="onSubmit()" class="col-4 p-4">
-      <div class="input-group mb-3">
-        <div class="input-group-prepend">
-          <span class="input-group-text" id="basic-addon1">Serial Number</span>
+    <div class="col-4 p-3">
+      <form [formGroup]="basicForm" (ngSubmit)="onSubmit()">
+        {{ showBarCode }}
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1">Serial Number</span>
+          </div>
+          <input required type="text" class="form-control" formControlName="number" #inputFoucs>
         </div>
-        <input required type="text" class="form-control" formControlName="number" #inputFoucs>
-      </div>
-      <div class="input-group mb-3">
-        <div class="input-group-prepend">
-          <span class="input-group-text" id="basic-addon1">目標扭力值</span>
+        <div class="d-flex justify-content-around position-relative">
+          <button type="submit" class="btn btn-info"
+          *ngIf="toggleBtn" [disabled]="!basicForm.valid && !auth">Start Connect</button>
+          <button type="button" class="btn btn-warning" *ngIf="!toggleBtn" (click)="reset()" [disabled]="enabledReset">Reset</button>
         </div>
-        <input required type="number" class="form-control" formControlName="target">
+      </form>
+      <div class="my-2">
+        <div class="row">
+          <div class="col-6">
+            <div class="p-2 border rounded position-relative h-100">
+              <span>Alarm</span>
+              <span class="alarmLight"
+                [ngClass]="{'success': dashboard.status === 1, 'fail': dashboard.status === 2, 'run': dashboard.status === 0}"></span>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="p-2 border rounded position-relative">
+              <span>Lock Torque</span>
+              <div class="text-center font-weight-bold h3 m-0">{{ dashboard.torque }} <span
+                  class="font-weight-light h5">{{ unit }}</span></div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-2">
+          <div class="col-6">
+            <div class="p-2 border rounded">
+              <span>Lock Angle</span>
+              <div class="text-center font-weight-bold h3 m-0">{{ dashboard.angle }} <span
+                  class="font-weight-light h5">deg</span></div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="p-2 border rounded">
+              <span>Lock Time</span>
+              <div class="text-center font-weight-bold h3 m-0">{{ dashboard.time }} <span
+                  class="font-weight-light h5">ms</span></div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="d-flex justify-content-around">
-        <button type="submit" class="btn btn-info" *ngIf="toggleBtn" [disabled]="!basicForm.valid">開始連線</button>
-        <button type="submit" class="btn btn-danger" *ngIf="!toggleBtn" (click)="stopConnect($event)">中止連線</button>
-        <button type="button" class="btn btn-warning" (click)="reset()" [disabled]="enabledReset">重置</button>
-      </div>
-    </form>
+    </div>
   </div>
-  <div class="h-50">
+  <div class="overflow-auto">
     <app-tables [data]="tableReport"></app-tables>
   </div>
 </div>
