--- a/src/app/pages/realtime/realtime.component.scss
+++ b/src/app/pages/realtime/realtime.component.scss
@@ -3,3 +3,41 @@
     left: 50%;
     transform: translateX(-50%);
 }
+
+.alarmLight{
+    display: inline-block;
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background:green;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.success{
+    background:green;
+    box-shadow: 0px 0px 8px green;
+}
+
+.fail{
+    background:red;
+    box-shadow: 0px 0px 8px red;
+}
+
+.run{
+    background: gray;
+    box-shadow: 0px 0px 8px gray;
+}
+.dashboardZone{
+    min-height: 300px;
+}
+
+.remind{
+    > p {
+        font-size: 1.5rem;
+    }
+    z-index: 1;
+}
+
